# components_guide

./: .buildpacks  .editorconfig  .gitignore  .iex.exs  .tool-versions  LICENSE  Makefile  README.md  checksum-Elixir.ComponentsGuide.Rustler.Math.exs  compile  elixir_buildpack.config  http_headers_test.exs  lab_swatch.wasm  mix.exs  phoenix_static_buildpack.config
.github/workflows/: release.yml
.nova/: Configuration.json
.nova/Tasks/: Dev.json  Test.json
apps/components_guide/: .gitignore  README.md  mix.exs
apps/components_guide_web/: .gitignore  README.md  mix.exs
apps/components_guide_web/assets/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  webpack.config.js
apps/components_guide_web/lib/: components_guide_web.ex
assets/: package-lock.json  package.json  tailwind.config.js  webpack.config.js
assets/css/: app.css  tela.css
assets/js/: app.js
config/: config.exs  dev.exs  prod.exs  prod.secret.exs  runtime.exs  test.exs
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/tests/: home.spec.ts
lib/: components_guide.ex  components_guide_web.ex
lib/components_guide/: application.ex  collected_repo.ex  content.ex  fake_search.ex  fetch.ex
lib/components_guide_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/orb/: ops.ex  orb.ex  type.ex
native/componentsguide_rustler_math/: Cargo.toml  README.md
native/molten/: Cargo.toml  README.md
native/molten/src/: lib.rs
samples/: snippets.exs
test/components_guide/: fetch_test.exs
test/support/: component_case.ex  conn_case.ex
(+438 files in other folders)
